<resources>
    <string name="app_name">升级打怪打装备</string>
    <string name="activity_title_monsters_place">野区</string>
    <string name="activity_title_hero_attributes">个人属性</string>
    <string name="string_rlv_empty">空空如也</string>
    <string name="string_monsters_place">出村打怪</string>
    <string name="string_hero_attributes">个人属性</string>
    <string name="string_hero_packages">背包</string>
    <string name="string_blacksmith">铁匠铺</string>
    <string name="string_big_monsters">大魔王</string>
    <string name="string_is_can_update">升级</string>
    <string name="string_is_can_mixture">合成</string>
    <string name="string_big_monsters_name">[入侵BOSS]-%1$s</string>
    <string name="string_big_monsters_attack"><![CDATA[大魔王攻击： <font color="#000000">%1$d</font>]]></string>
    <string name="string_big_monsters_armor"><![CDATA[大魔王护甲： <font color="#000000">%1$d</font>]]></string>
    <string name="string_big_monsters_life"><![CDATA[大魔王生命： <font color="#000000">%1$d</font>]]></string>
    <string name="string_big_monsters_distance_invade"><![CDATA[距离<font color="#D32F2F">魔王</font>入侵，还有：<font color="#D32F2F" ><big><b>%1$d</b></big></font>天！]]></string>
    <string name="string_shop">购买装备</string>
    <string name="string_fragment_title_buy_attack">武器商店</string>
    <string name="string_fragment_title_buy_armor">铠甲商店</string>
    <string name="string_fragment_title_buy_medicine">药品商店</string>
    <string name="string_fragment_title_equip">已装备</string>
    <string name="string_fragment_title_update_attack">打造武器</string>
    <string name="string_fragment_title_update_armor">打造铠甲</string>
    <string name="string_fragment_title_update_accessories">打造饰品</string>
    <string name="string_fragment_title_package">我的道具</string>
    <string name="string_fragment_title_skill">我的技能</string>
    <string name="string_medicine_shop">购买药品</string>
    <string name="string_rest">休息</string>
    <string name="string_rest_loading_msg">休息中...5秒后结束</string>
    <string name="permission_title">权限需要</string>
    <string name="permissions_message">为了正常使用这个功能，我们需要一些权限。</string>
    <string name="toast_copy_success">复制成功</string>
    <string name="monsters_msg_attack">攻击：%1$d</string>
    <string name="monsters_msg_life">生命：%1$d</string>
    <string name="monsters_msg_has_life">生命：%1$d/%2$d</string>
    <string name="hero_msg_has_life">生命：%1$d/%2$d</string>
    <string name="monsters_msg_has_count">还剩次数：%1$d / %2$d</string>
    <string name="string_buy_msg_has_count">可购买次数：%1$d / %2$d</string>
    <string name="string_practice_has_count">可修炼次数：%1$d / %2$d</string>
    <string name="monsters_msg_use_power">消耗体力：%1$d</string>
    <string name="monsters_msg_armor">护甲：%1$d</string>
    <string name="monsters_msg_exp">经验：%1$d</string>
    <string name="monsters_msg_money">金钱：%1$d</string>
    <string name="string_equip_msg_attack">攻击：%1$d</string>
    <string name="string_pk_msg_attack">攻击：%1$d</string>
    <string name="string_pk_msg_name_strengthen">%1$s +%2$d</string>
    <string name="string_equip_msg_name_strengthen">%1$s +%2$d</string>
    <string name="string_equip_msg_armor">防御：%1$d</string>
    <string name="string_pk_msg_armor">防御：%1$d</string>
    <string name="string_pk_msg_life">生命上限：%1$d</string>
    <string name="medicines_msg_price">售价：%1$d</string>
    <string name="medicines_msg_life">增加当前生命：%1$d</string>
    <string name="medicines_msg_attack">增加攻击：%1$d</string>
    <string name="medicines_msg_armor">增加防御：%1$d</string>
    <string name="medicines_msg_life_up">增加生命上限：%1$d</string>
    <string name="shop_attack_msg_price">售价：%1$d</string>
    <string name="shop_attack_msg_attack">增加攻击：%1$d</string>
    <string name="shop_attack_msg_armor">增加护甲：%1$d</string>
    <string name="shop_attack_msg_life">增加生命：%1$d</string>
    <string name="shop_armor_msg_price">售价：%1$d</string>
    <string name="shop_armor_msg_attack">增加攻击：%1$d</string>
    <string name="shop_armor_msg_armor">增加护甲：%1$d</string>
    <string name="shop_armor_msg_life">增加生命：%1$d</string>
    <string name="shop_accessories_msg_price">售价：%1$d</string>
    <string name="shop_accessories_msg_attack">增加攻击：%1$d</string>
    <string name="shop_accessories_msg_armor">增加护甲：%1$d</string>
    <string name="shop_accessories_msg_life">增加生命：%1$d</string>
    <string name="hero_attributes_liliang_and_exp">当前力量：%1$d 经验:%2$d / %3$d</string>
    <string name="hero_attributes_minjie_and_exp">当前敏捷：%1$d 经验:%2$d / %3$d</string>
    <string name="hero_attributes_zhihui_and_exp">当前智慧：%1$d 经验:%2$d / %3$d</string>
    <string name="hero_attributes_qiangzhuang_and_exp">当前强壮：%1$d 经验:%2$d / %3$d</string>
    <plurals name="string_test">
        <item quantity="one">%s Like</item>
        <item quantity="other">%s Likes</item>
    </plurals>
    <string name="hero_attributes_msg_attack"><![CDATA[当前攻击：%1$d <font color="#64b5f6">成长：%2$d</font>]]></string>
    <string name="hero_attributes_msg_armor"><![CDATA[当前护甲：%1$d <font color="#64b5f6">成长：%2$d</font>]]></string>
    <string name="hero_attributes_msg_life"><![CDATA[当前生命：%1$d / %2$d <font color="#64b5f6">成长：%3$d</font>]]></string>
    <string name="hero_attributes_msg_exp">当前经验：%1$d</string>
    <string name="hero_attributes_msg_money">当前金钱：%1$d</string>
    <string name="hero_attributes_msg_days">当前天数：%1$d</string>
    <string name="hero_attributes_msg_need_exp">距离升级：%1$d / %2$d</string>
    <string name="hero_attributes_msg_body_power">当前体力：%1$d / %2$d</string>
    <string name="hero_attributes_msg_skill_count"><![CDATA[技能点：%1$d / %2$d]]></string>
    <string name="hero_attributes_msg_attack_speed"><![CDATA[攻击间隔：%1$d 毫秒]]></string>
    <string name="hero_attributes_msg_level">当前等级：%1$d</string>
    <string name="string_attack_loading_msg">攻击中...2秒后结束</string>
    <string name="string_error">程序出错，请重试</string>
    <string name="string_no_power">体力不足，请尝试 #休息#</string>
    <string name="string_attack_fail"><![CDATA[<font color="#D32F2F">攻击失败</font>]]></string>
    <string name="string_attack_win_title">攻击成功</string>
    <string name="string_attack_win_no_count">此怪物可攻击次数不足。\n可尝试#休息#</string>
    <string name="string_attack_win">攻击成功。<br />获得金钱：%1$d；获得经验：%2$d；损失生命：%3$d。</string>
    <string name="string_attack_win_new"><![CDATA[击杀怪物成功。<br />获得<font color="#FB8C00">金钱：%1$d</font>；获得经验：%2$d。]]></string>
    <string name="string_attack_win_is_drop_new"><![CDATA[击杀怪物成功。<br />获得<font color="#FB8C00">金钱：%1$d</font>；获得经验：%2$d。<br />怪物掉落：%3$s]]></string>
    <string name="string_attack_win_has_goods">攻击成功，获得金钱：%1$d；获得经验：%2$d；损失生命：%3$d。<br />掉落：%4$s</string>
    <string name="string_buy_medicines_fail">购买失败，钱不够</string>
    <string name="string_buy_medicines_suc"><![CDATA[购买%3$s成功，当前生命值增加：%1$d；减少金钱：%2$d。]]></string>
    <string name="string_buy_medicines_suc_and_up"><![CDATA[购买%4$s成功，当前生命值增加：%1$d；增加生命上限：%3$d。<br/>增加攻击：%5$d；增加防御：%6$d；<br/>减少金钱：%2$d。]]></string>
    <string name="string_buy_content_suc"><![CDATA[购买%1$s成功，减少金钱：%2$d。]]></string>
    <string name="string_buy_title_suc">购买成功</string>
    <string name="string_buy_title_error">购买失败</string>
    <string name="string_buy_content_error"><![CDATA[购买失败，<font color="#D32F2F">钱不够。</font>]]></string>
    <string name="string_buy_content_error_no_count"><![CDATA[购买失败，<font color="#D32F2F">可购买次数不足。</font>]]></string>
    <string name="string_buy_armor_suc">购买成功，减少金钱：%1$d。</string>
    <string name="string_buy_base_suc">购买成功，减少金钱：%1$d。</string>
    <string name="string_buy_base_fail">购买失败，钱不够</string>
    <string name="activity_title_medicines_shop">药店</string>
    <string name="string_has_equip">已装备</string>
    <string name="string_packages">背包详情</string>
    <string name="string_equip_loading">装备中...</string>
    <string name="string_no_hold_on_attack">未装备武器</string>
    <string name="string_no_hold_on_armor">未装备铠甲</string>
    <string name="string_no_hold_on_accessories">未装备饰品</string>
    <string name="string_activity_monsters_power">当前体力：%1$d / %2$d</string>
    <string name="string_activity_monsters_money"><![CDATA[当前金钱：<font color="#FB8C00">%1$d</font>]]></string>
    <string name="string_activity_monsters_hero_life"><![CDATA[当前生命：<font color="#000000">%1$d / %2$d</font>]]></string>
    <string name="string_no_can_rest_title">无法休息</string>
    <string name="string_no_can_rest_pos_btn">保卫家乡</string>
    <string name="string_no_can_rest_nav_btn">再等等</string>
    <string name="string_no_can_rest_content">入侵魔王都已经到家门口了！你竟然还想着休息？？</string>
    <string name="string_dialog_cancel">取消</string>
    <string name="string_dialog_ok">确定</string>
    <string name="string_sells_suc">卖出成功，获得金钱：%1$d</string>
    <string name="string_sells_suc_title">卖出成功</string>
    <string name="string_strengthen_suc">恭喜，强化成功！</string>
    <string name="string_strengthen_fail">很遗憾，强化失败。</string>
    <string name="string_strengthen_no_material">缺少材料，请注意。</string>
    <string name="string_strengthen_error">程序异常，请重试。</string>
    <string name="string_strengthen_title">强化结果：</string>
    <string name="string_attack_big_monster_suc">抵御魔王成功</string>
    <string name="string_attack_big_monster_fail">抵御魔王失败</string>
    <string name="string_big_monsters_show_title">魔王现世</string>
    <string name="string_big_monsters_show_content">兄dei，抄家伙干魔王，保家卫国了！</string>
    <string name="string_start_fighting">开始战斗</string>
    <string name="string_blacksmith_update_suc"><![CDATA[<font color="#43A047">升级成功</font>]]></string>
    <string name="string_blacksmith_update_error"><![CDATA[<font color="#D32F2F">升级失败</font>]]></string>
    <string name="string_blacksmith_mix_suc"><![CDATA[<font color="#FBC02D">合成成功</font>]]></string>
    <string name="string_blacksmith_mix_error"><![CDATA[<font color="#D32F2F">合成失败</font>]]></string>
    <string name="string_attack_no_harm">无法破防</string>
    <string name="string_big_monsters_is_show">魔王已经入侵！</string>
    <string name="string_hero_name">伟大的英雄</string>
    <string name="string_guide_title">了解一下玩法吧</string>
    <string name="string_game_help">游戏说明</string>
    <string name="string_re_start">重新开始</string>
    <string name="string_setting_help_title">游戏说明</string>
    <string name="string_setting_help_content"><![CDATA[1、游戏胜利条件：消灭第十五天入侵的魔王。<br/>2、游戏出装建议：第一步先<font color="#FBC02D">短刀</font>、<font color="#FBC02D">重甲</font>；然后转<font color="#FBC02D">刃甲</font>；进而出<font color="#D32F2F">干将·莫邪</font>；紧接着<font color="#FBC02D">鬼神甲</font>；然后想办法出<font color="#D32F2F">东皇钟</font>；最后出<font color="#D32F2F">龙渊剑</font>、<font color="#D32F2F">轩辕甲</font>。<br/>3、游戏中有一些特殊的怪物、特殊的药品一定要好好利用。<br/>4、游戏有一些<font color="#512DA8">奇遇</font>、<font color="#512DA8">彩蛋</font>。<br/>5、祝你游戏愉快~]]></string>
    <string name="activity_title_setting">游戏设置</string>
    <string name="string_re_start_dialog_title">重置警告</string>
    <string name="string_re_start_dialog_content">注意，一旦重置将失去您的所有游戏数据，您确定么？</string>
    <string name="string_place_re_start">数据被重置，可以正常游戏啦~</string>
    <string name="string_re_start_loading">正在重置数据，请稍候...</string>
    <string name="string_faker_power">你触发了“作弊”代码，体力恢复至100。</string>
    <string name="string_update_mes">更新公告</string>
    <string name="string_feed_back">反馈 / 吐槽</string>
    <string name="string_update_mes_content"><![CDATA[<font color="#2962FF">V1.01版本更新</font><br/>1、修复药品购买次数Bug。<br/>2、修复已知UI显示Bug。<br/>3、修复重置游戏Bug。<br/>4、增加技能玩法<br/>5、增加更多的奇遇/特殊怪物。<br/>6、增加全新装备，增加部分装备属性，增强部分魔王属性。<br/>
    <font color="#2962FF">V1.02版本更新</font><br/>1、增加任务系统<br/>2、战斗中增加撤退功能<br/>3、修复Bug<br/>
    <font color="#2962FF">V1.03版本更新</font><br/>1、允许取消魔王入侵玩法<br/>2、增加力量、敏捷、智慧、强壮属性<br/>3、装备增加属性限制<br/>4、部分装备需要解锁<br/>5、材料可以重叠放置]]></string>
    <string name="update_title">发现全新版本</string>
    <string name="update_desc">一个全新的版本被发出，尝试更新一下？ </string>
    <string name="update_ok">没毛病，老铁</string>
    <string name="update_cancel">我拒绝</string>
    <string name="string_update_success">新的安装包下载成功</string>
    <string name="string_update_err">更新包下载失败</string>
    <string name="string_need_skill_count">所需技能点：%1$d</string>
    <string name="string_study_suc_title">学习成功</string>
    <string name="string_study_err_title">学习失败</string>
</resources>