<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.mdove.levelgame.main.home.model.MainActionHandler" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/btn_monsters_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_normal_height"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_white_round"
            android:gravity="center"
            android:onClick="@{()->handler.onClickMonstersPlace()}"
            android:text="@string/string_monsters_place"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_normal_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" />

        <TextView
            android:id="@+id/btn_shop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_normal_height"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_white_round"
            android:gravity="center"
            android:onClick="@{()->handler.onClickGoShop()}"
            android:text="@string/string_shop"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_normal_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_monsters_place" />

        <TextView
            android:id="@+id/btn_medicines_shop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_normal_height"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_white_round"
            android:gravity="center"
            android:onClick="@{()->handler.onClickBuyMedicines()}"
            android:text="@string/string_medicine_shop"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_normal_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_shop" />

        <TextView
            android:id="@+id/btn_hero_attributes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_normal_height"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_white_round"
            android:gravity="center"
            android:onClick="@{()->handler.onClickHeroAttributes()}"
            android:text="@string/string_hero_attributes"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_normal_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_medicines_shop" />

        <TextView
            android:id="@+id/btn_hero_packages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_normal_height"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_white_round"
            android:gravity="center"
            android:onClick="@{()->handler.onClickHeroPackage()}"
            android:text="@string/string_hero_packages"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_normal_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_hero_attributes" />

        <TextView
            android:id="@+id/btn_big_monsters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_red_round"
            android:gravity="center"
            android:onClick="@{()->handler.onClickBigMonsters()}"
            android:padding="12dp"
            android:text="@string/string_big_monsters"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>