<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.mdove.levelgame.main.home.model.HomeActionHandler" />

        <variable
            name="vm"
            type="com.mdove.levelgame.main.home.model.BigMonstersModelVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name" />
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/tv_invade"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_btn_normal_height"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:gravity="right|center_vertical"
            android:text="@string/string_monsters_place"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_normal_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            tools:text="距离魔王进攻" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rlv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/main_btn_normal_margin"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/layout_big_monsters"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_invade" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_big_monsters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_btn_normal_margin"
            android:background="@drawable/bg_red_round"
            android:onClick="@{()->handler.onClickBigMonsters(vm)}"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/btn_big_monsters_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@{vm.name}"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/string_big_monsters" />

            <TextView
                android:id="@+id/btn_big_monsters_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:htmlColorText="@{vm.attack}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_big_monsters_name"
                tools:text="攻击" />

            <TextView
                android:id="@+id/btn_big_monsters_armor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:htmlColorText="@{vm.armor}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_big_monsters_attack"
                tools:text="护甲" />

            <TextView
                android:id="@+id/btn_big_monsters_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:htmlColorText="@{vm.life}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_big_monsters_armor"
                tools:text="生命" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>